# speculate.rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: block.rs  generator.rs  lib.rs
tests/: basic.rs  example.rs
